k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver-deployment
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "waanvieira/go:latest"
          
          resources:
            requests: 
              cpu: "0.01"
              memory: 5Mi
            limits:
              cpu: "0.01"
              memory: 5Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 4
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
            # initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            # initialDelaySeconds: 15
